--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-amazona",
+  "name": "hivhestin-shop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@playwright/test": "^1.55.0",
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -35,6 +36,8 @@
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
+    "next-intl": "^4.3.9",
+    "next-themes": "^0.4.6",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
