--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
   "rewrites": [
     {
       "source": "/((?!api|_next|_static|favicon.ico).*)",
-      "destination": "/index.html"
+      "destination": "/tr"
     }
   ],
   "headers": [
