Update rewrite rule in vercel.json
Changed the rewrite source from a regex pattern to the root path ('/'), directing all root requests to '/tr'.

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   },
   "rewrites": [
     {
-      "source": "/((?!api|_next|_static|favicon.ico).*)",
+      "source": "/",
       "destination": "/tr"
     }
   ],
