--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@playwright/test": "^1.55.0",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.16.3",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -31,6 +31,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^7.0.1",
     "@uploadthing/react": "^7.1.5",
@@ -45,7 +46,6 @@
     "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
-    "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -67,6 +67,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "prisma": "^6.16.3",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
