Update trendyol-products.json with prices, stock, and categories
Product entries in trendyol-products.json were updated to include accurate prices, stock quantities, and more descriptive category names. This improves product data quality and supports better categorization and inventory management. Also added new npm script for importing Trendyol JSON, and introduced convert-trendyol-json-to-json.js script.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "prisma generate",
     "db:migrate": "prisma migrate deploy",
     "db:seed": "prisma db seed",
-    "import:trendyol": "node src/scripts/convert-trendyol-xlsx-to-json.js"
+    "import:trendyol": "node src/scripts/convert-trendyol-xlsx-to-json.js",
+    "import:trendyol:json": "node src/scripts/convert-trendyol-json-to-json.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
