--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^7.0.1",
     "@uploadthing/react": "^7.1.5",
+    "@vitalets/google-translate-api": "^9.2.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "http-proxy-agent": "^7.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
@@ -62,6 +64,7 @@
     "stripe": "^17.6.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "translatte": "^3.0.1",
     "uploadthing": "^7.4.4",
     "xlsx": "^0.18.5",
     "zod": "^3.24.1",
