--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
+    "sanitize-html": "^2.17.0",
     "sonner": "^2.0.7",
     "stripe": "^17.6.0",
     "tailwind-merge": "^3.0.1",
