--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:migrate": "prisma migrate deploy",
     "db:seed": "prisma db seed",
     "import:trendyol": "node src/scripts/convert-trendyol-xlsx-to-json.js",
-    "import:trendyol:json": "node src/scripts/convert-trendyol-json-to-json.js"
+    "import:trendyol:json": "node src/scripts/convert-trendyol-json-to-json.js",
+    "slug:backfill": "node scripts/slug-backfill.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -24,6 +25,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -46,6 +48,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.5.2",
