Add localized product slugs and translation slug backfill
Introduces per-locale product slugs in the ProductTranslation model and enforces uniqueness. Adds a migration script to backfill translation slugs. Updates product creation and update APIs to generate unique slugs for each translation. Refactors product fetching and slug resolution logic to prefer localized slugs, adds a new slug-map API endpoint, and improves language switcher to redirect to translated product slugs. Also updates banner and product fetching to use dynamic base URLs.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:seed": "prisma db seed",
     "import:trendyol": "node src/scripts/convert-trendyol-xlsx-to-json.js",
     "import:trendyol:json": "node src/scripts/convert-trendyol-json-to-json.js",
-    "slug:backfill": "node scripts/slug-backfill.js"
+    "slug:backfill": "node scripts/slug-backfill.js",
+    "slug:backfill:translations": "node scripts/translation-slug-backfill.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
