Unify static page models into generic Page and PageTranslation
Replaces individual static page models (AboutPage, PrivacyPage, CookiePage, TermsPage, DistanceSalesPage, ReturnPolicyPage and their translations) with a single Page and PageTranslation model in Prisma schema. Updates all API routes and page logic to use the new generic Page structure. Adds migration and cleanup scripts, and updates package.json scripts accordingly.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "import:trendyol": "node src/scripts/convert-trendyol-xlsx-to-json.js",
     "import:trendyol:json": "node src/scripts/convert-trendyol-json-to-json.js",
     "slug:backfill": "node scripts/slug-backfill.js",
-    "slug:backfill:translations": "node scripts/translation-slug-backfill.js"
+    "slug:backfill:translations": "node scripts/translation-slug-backfill.js",
+    "cleanup:example-users": "tsx scripts/cleanup-example-users.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
