--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "slug:backfill": "node scripts/slug-backfill.js",
     "slug:backfill:translations": "node scripts/translation-slug-backfill.js",
     "cleanup:example-users": "tsx scripts/cleanup-example-users.ts",
-    "translate:categories": "tsx scripts/translate-missing-category-translations.ts"
+    "translate:categories": "tsx scripts/translate-missing-category-translations.ts",
+    "fix:product-details-newlines": "tsx scripts/replace-semicolons-in-product-translations.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -35,6 +36,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
