--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cleanup:example-users": "tsx scripts/cleanup-example-users.ts",
     "translate:categories": "tsx scripts/translate-missing-category-translations.ts",
     "fix:product-details-newlines": "tsx scripts/replace-semicolons-in-product-translations.ts",
-    "price:backfill": "tsx scripts/update-original-price.ts"
+    "price:backfill": "tsx scripts/update-original-price.ts",
+    "trendyol:attributes:import": "tsx scripts/import-trendyol-attributes.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -92,6 +93,7 @@
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "prisma": "^6.16.3",
+    "server-only": "^0.0.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
