--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 3000",
-    "build": "prisma generate && next build",
+    "build": "npm run build:prisma && npm run build:next",
+    "build:prisma": "prisma generate",
+    "build:next": "next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
