Add coupon management and product description normalization
Implements admin UI and API endpoints for coupon CRUD and rule management, including BOGO and discount types. Adds scripts and API routes for normalizing product descriptions, and updates the Trendyol import admin page with new description update actions. Also includes new and updated Excel files, a new Pazarama export script, and minor fixes to category API.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "translate:categories": "tsx scripts/translate-missing-category-translations.ts",
     "fix:product-details-newlines": "tsx scripts/replace-semicolons-in-product-translations.ts",
     "price:backfill": "tsx scripts/update-original-price.ts",
-    "trendyol:attributes:import": "tsx scripts/import-trendyol-attributes.ts"
+    "trendyol:attributes:import": "tsx scripts/import-trendyol-attributes.ts",
+    "normalize:descriptions": "tsx scripts/normalize-descriptions.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
