--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "embla-carousel-react": "^8.5.2",
     "http-proxy-agent": "^7.0.2",
     "lucide-react": "^0.475.0",
-    "next": "15.1.6",
+    "next": "^16.0.10",
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
@@ -93,7 +93,7 @@
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.16.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8",
     "prisma": "^6.16.3",
     "server-only": "^0.0.1",
