--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@playwright/test": "^1.55.0",
-    "@prisma/client": "^6.16.3",
+    "@prisma/client": "6.19.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -66,10 +66,10 @@
     "http-proxy-agent": "^7.0.2",
     "lucide-react": "^0.475.0",
     "next": "^16.0.10",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.30",
     "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.11",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -95,7 +95,7 @@
     "eslint": "^9",
     "eslint-config-next": "^16.0.10",
     "postcss": "^8",
-    "prisma": "^7.1.0",
+    "prisma": "6.19.1",
     "server-only": "^0.0.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
