--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-quill-new": "^3.7.0",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
     "sanitize-html": "^2.17.0",
