--- a/package.json
+++ b/package.json
@@ -53,16 +53,21 @@
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/d3-scale": "^4.0.9",
+    "@types/geoip-lite": "^1.4.4",
     "@types/nodemailer": "^7.0.1",
+    "@types/ua-parser-js": "^0.7.39",
     "@uploadthing/react": "^7.1.5",
     "@vitalets/google-translate-api": "^9.2.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.5.2",
+    "geoip-lite": "^1.4.10",
     "http-proxy-agent": "^7.0.2",
     "lucide-react": "^0.475.0",
     "next": "^16.0.10",
@@ -74,6 +79,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-quill-new": "^3.7.0",
+    "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
     "sanitize-html": "^2.17.0",
@@ -82,6 +88,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "translatte": "^3.0.1",
+    "ua-parser-js": "^2.0.7",
     "uploadthing": "^7.4.4",
     "xlsx": "^0.18.5",
     "zod": "^3.24.1",
