Add @types/react-simple-maps to devDependencies
Included @types/react-simple-maps v3.0.6 in devDependencies to provide TypeScript type definitions for react-simple-maps. This addition improves type safety and developer experience when working with map components.

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-simple-maps": "^3.0.6",
     "@types/sanitize-html": "^2.16.0",
     "eslint": "^9",
     "eslint-config-next": "^16.0.10",
