--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "embla-carousel-react": "^8.5.2",
     "geoip-lite": "^1.4.10",
     "http-proxy-agent": "^7.0.2",
+    "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.475.0",
     "next": "^16.0.10",
     "next-auth": "^5.0.0-beta.30",
