--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
+    "react-barcode": "^1.6.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-quill-new": "^3.7.0",
